--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,33 @@
   -webkit-column-gap: 1.3rem;
           column-gap: 1.3rem;
   row-gap: 4.5rem;
-  margin-bottom: 4.5rem;
+  margin-bottom: 2.25rem;
+  margin-top: 2.25rem;
 }
 
-.timeline .time, .timeline .title {
+.timeline .time *, .timeline .title * {
   font-size: 1.3rem;
   font-weight: bold;
+}
+
+.timeline .time {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / span 1;
+  position: relative;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  text-align: right;
+}
+
+.timeline .time::before {
+  content: ' ';
+  background-color: var(--timeline-time-line);
+  position: absolute;
+  width: 0.5rem;
+  height: 100%;
+  right: -1.8rem;
 }
 
 .timeline .info {
@@ -56,7 +77,7 @@
 }
 
 .timeline .info .title {
-  margin-bottom: 0.65rem;
+  margin-bottom: 0.86667rem;
 }
 
 .timeline .info::after {
@@ -69,26 +90,6 @@
 
 .timeline .info:last-child::after {
   content: none;
-}
-
-.timeline .time {
-  position: relative;
-  text-align: right;
-  -ms-flex-item-align: start;
-      -ms-grid-row-align: start;
-      align-self: start;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1 / span 1;
-}
-
-.timeline .time::after {
-  content: ' ';
-  background-color: var(--timeline-time-line);
-  position: absolute;
-  width: 0.5rem;
-  height: 100%;
-  right: -1.8rem;
 }
 
 .timeline .main-line {
