--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,295 @@
-/* No CSS */
+.timeline.line-2 .time-container::before, .timeline.line-2 .time-container::after {
+  right: -2.2rem;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-radius: 50%;
+}
+
+.timeline.line-2 .time-container::before {
+  height: 1.2rem;
+  width: 1.2rem;
+}
+
+.timeline.line-2 .time-container::after {
+  background: transparent;
+  border: 0.2rem solid var(--text-normal);
+  height: 0.8rem;
+  width: 0.8rem;
+  opacity: 0.15;
+}
+
+.timeline.line-2 .main-line {
+  width: 0.2rem;
+  opacity: 0.15;
+}
+
+.timeline.line-3 .time-container::before {
+  background: var(--timeline-active-color);
+  height: 1rem;
+  width: 1rem;
+  border: 0.3rem solid var(--background-primary);
+  right: -2.45rem;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-radius: 50%;
+}
+
+.timeline.line-3 .time-container::after {
+  background: transparent;
+}
+
+.timeline.line-3 .main-line {
+  width: 0.3rem;
+  opacity: 0.15;
+}
+
+.timeline.line-4 .time-container::before, .timeline.line-4 .time-container::after {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-radius: 50%;
+}
+
+.timeline.line-4 .time-container::before {
+  background: var(--text-normal);
+  height: 1.4rem;
+  width: 1.4rem;
+  right: -2.3rem;
+}
+
+.timeline.line-4 .time-container::after {
+  opacity: 1;
+  background: var(--timeline-active-color);
+  height: 0.77778rem;
+  width: 0.77778rem;
+  right: -1.98889rem;
+}
+
+.timeline.line-4 .main-line {
+  opacity: 1;
+  width: 0.2rem;
+  background-color: transparent;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(60%, var(--text-normal)), color-stop(0%, rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(var(--text-normal) 60%, rgba(255, 255, 255, 0) 0%);
+  background-position: right;
+  background-size: 0.2rem 1.5rem;
+  background-repeat: repeat-y;
+}
+
+.timeline.line-5 .time-container::before, .timeline.line-5 .time-container::after {
+  top: 50%;
+}
+
+.timeline.line-5 .time-container::before {
+  width: 3rem;
+  height: 3rem;
+  right: -3.1rem;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.timeline.line-5 .time-container::after {
+  width: 1rem;
+  height: 1rem;
+  right: 0;
+  -webkit-transform: translateY(-50%) translateX(2.1rem) rotate(45deg);
+          transform: translateY(-50%) translateX(2.1rem) rotate(45deg);
+}
+
+.timeline.line-5 .main-line {
+  width: 0.2rem;
+  opacity: 0.25;
+}
+
+.timeline.body-2 .info, .timeline.body-3 .info, .timeline.body-4 .info {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--background-primary-alt);
+}
+
+.timeline.body-2 .info::after, .timeline.body-3 .info::after, .timeline.body-4 .info::after {
+  display: none;
+}
+
+.timeline.body-2 .info, .timeline.body-4 .info {
+  padding: 1.5rem;
+}
+
+.timeline.body-2 .time-container, .timeline.body-4 .time-container {
+  margin-top: 1.5rem;
+}
+
+.timeline.body-2 .info {
+  border-radius: 1.5rem;
+}
+
+.timeline.body-3 .info {
+  margin-left: 1rem;
+}
+
+.timeline.body-3 .info .title {
+  position: relative;
+  background: var(--timeline-active-color);
+  padding: 0 1.5rem;
+  margin: 0;
+}
+
+.timeline.body-3 .info .title::before {
+  content: '';
+  position: absolute;
+  width: 2rem;
+  background: var(--timeline-active-color);
+  top: 0;
+  bottom: 0;
+  left: -1rem;
+  -webkit-clip-path: polygon(1rem 0, 100% 0, 100% 100%, 1rem 100%, 0 50%);
+          clip-path: polygon(1rem 0, 100% 0, 100% 100%, 1rem 100%, 0 50%);
+}
+
+.timeline.body-3 .info .description {
+  padding: 1.5rem;
+}
+
+.timeline.body-4 .info {
+  border-left: 0.3rem solid var(--timeline-active-color);
+}
+
+.timeline.spaced-lines .description p {
+  line-height: 1.7rem;
+}
+
+.timeline {
+  --timeline-active-color: var(--background-modifier-success);
+}
+
+.timeline.active-color-background-modifier-success {
+  --timeline-active-color: var(--background-modifier-success);
+}
+
+.timeline.active-color-background-modifier-error {
+  --timeline-active-color: var(--background-modifier-error);
+}
+
+.timeline.active-color-background-modifier-error-hover {
+  --timeline-active-color: var(--background-modifier-error-hover);
+}
+
+.timeline.active-color-text-accent {
+  --timeline-active-color: var(--text-accent);
+}
+
+.timeline.active-color-text-accent-hover {
+  --timeline-active-color: var(--text-accent-hover);
+}
+
+.timeline.active-color-text-error {
+  --timeline-active-color: var(--text-error);
+}
+
+.timeline.active-color-text-error-hover {
+  --timeline-active-color: var(--text-error-hover);
+}
+
+.timeline.active-color-text-selection {
+  --timeline-active-color: var(--text-selection);
+}
+
+.timeline.active-color-interactive-accent {
+  --timeline-active-color: var(--interactive-accent);
+}
+
+.timeline.active-color-interactive-accent-hover {
+  --timeline-active-color: var(--interactive-accent-hover);
+}
+
+.timeline.active-color-interactive-success {
+  --timeline-active-color: var(--interactive-success);
+}
+
+.timeline {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto 1fr;
+      grid-template-columns: auto auto 1fr;
+  -webkit-column-gap: 1.5rem;
+          column-gap: 1.5rem;
+  row-gap: 4.5rem;
+  margin: 2.3rem 0;
+}
+
+.timeline .time *, .timeline .title * {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.timeline .time-container {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / span 1;
+  position: relative;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  text-align: right;
+}
+
+.timeline .time-container::before, .timeline .time-container::after {
+  content: ' ';
+  position: absolute;
+  height: 100%;
+  width: 0.5rem;
+  right: -2rem;
+  top: 0;
+}
+
+.timeline .time-container::before {
+  background-color: var(--background-primary);
+}
+
+.timeline .time-container::after {
+  background-color: var(--text-normal);
+  opacity: 0.25;
+}
+
+.timeline .info {
+  position: relative;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / span 1;
+}
+
+.timeline .info .title {
+  margin-bottom: 0.86667rem;
+}
+
+.timeline .info::after {
+  content: ' ';
+  position: absolute;
+  border-bottom: 0.1rem dashed var(--text-normal);
+  opacity: 0.1;
+  width: 100%;
+  height: 2.25rem;
+}
+
+.timeline .info:last-child::after {
+  display: none;
+}
+
+.timeline .main-line {
+  height: 100%;
+  width: 0.5rem;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / span 1;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  background-color: var(--text-normal);
+  opacity: 0.1;
+}
+
+.timeline .time-container .time > *:first-child, .timeline .time-container .time > *:last-child, .timeline .info .title > *:first-child, .timeline .info .title > *:last-child, .timeline .info .description > *:first-child, .timeline .info .description > *:last-child {
+  margin-top: 0;
+  margin-bottom: 0;
+}
