--- a/src/style/styles.sass
+++ b/src/style/styles.sass
@@ -1,48 +1,15 @@
-
-$header-size: 1.3rem
-$event-margin: 4.5rem
-$line-margin: 1.5rem
-$point-size: 0.5rem
-$line-width: 0.5rem
-
-//resize var system (failure no. 8)
-// $vars-resize: [["line-width", [0.2rem, 0.5rem, 0.8rem, 1.1rem, 1.4rem]],["point-size", [0.2rem, 0.5rem, 0.8rem, 1.1rem, 1.4rem]]]
-
-// @each $var in $vars-resize
-//     $var-name: nth($var, 1)
-//     $var-sizes: nth($var, 2)
-
-//     @for $i from 1 through length($var-sizes)
-//         $size: nth($var-sizes, $i)
-//         .timeline.#{$var-name + "-" + $i}
-//             #{"--timeline-" + $var-name}: $size
-
-// @function get-var-index($name)
-//     @for $i from 1 through length($vars-resize)
-//         $current-var: nth($vars-resize, $i)
-//         @if $name == nth($current-var, 1)
-//             @return $i
-
-//     @return -1
-
-// @mixin print-var-size($name, $size)
-//     $index: get-var-index($name)
-
-//     @if $index != -1
-//         $var: nth($vars-resize, $index)
-//         $resize-values: nth($var, 2)
-//         #{"--timeline-" + $name}: nth($resize-values, $size)
-
-@import "./timeline-lines"
-@import "./timeline-bodies"
+@import "prefix"
 
 .timeline.spaced-lines
-    .description
+    > .description
         p
             line-height: 1.7rem
 
+
+.timeline.hide-titles > .title
+    display: none
+
 .timeline
-    //--interactive accent
     --timeline-active-color: var(--background-modifier-success)
 
 $active-colors: ["background-modifier-success", "background-modifier-error", "background-modifier-error-hover", "text-accent", "text-accent-hover", "text-error", "text-error-hover", "text-selection", "interactive-accent", "interactive-accent-hover", "interactive-success"]
@@ -51,30 +18,43 @@ $active-colors: ["background-modifier-success", "background-modifier-error", "ba
     .timeline.active-color-#{$color}
         --timeline-active-color: #{"var(--"+$color+")"}
 
+
 .timeline
     display: grid
     grid-template-columns: auto auto 1fr
     column-gap: $line-margin
-    row-gap: $event-margin
     margin: 2.3rem 0
+    
+    .time, .title, .description
+        > *:first-child
+            margin-top: 0
+
+        > *:last-child
+            margin-bottom: 0
+
+    .description, .title
+        grid-column: 3
 
     .time, .title
-        *
+        display: flex
+        flex-direction: column
+        justify-content: center
+
+        > *
             font-size: $header-size
             font-weight: bold
 
-    .time-container
-        grid-column: 1 / span 1
+    .time
+        grid-column: 1
         position: relative
-        align-self: start
-        text-align: right
+        justify-self: right
 
         &::before, &::after
             content: ' '
             position: absolute
             height: 100%
             width: $point-size
-            right: - $line-margin - ($point-size + $line-width) / 2
+            right: - $line-margin - math.div($point-size + $line-width, 2)
             top: 0
 
         &::before
@@ -84,11 +64,12 @@ $active-colors: ["background-modifier-success", "background-modifier-error", "ba
             background-color: var(--text-normal)
             opacity: 0.25
 
-    .info
+
+    .description
         position: relative
-        grid-column: 3 / span 1
-        .title
-            margin-bottom: $header-size/1.5
+        margin-bottom: $event-margin
+        
+        @include padding-top($text-margin)
 
         &::after
             content: ' '
@@ -96,24 +77,20 @@ $active-colors: ["background-modifier-success", "background-modifier-error", "ba
             border-bottom: 0.1rem dashed var(--text-normal)
             opacity: 0.1
             width: 100%
-            height: $event-margin/2
+            height: math.div($event-margin, 2)
 
-    .info:last-child::after
-        display: none
+        &:last-child
+            margin-bottom: $text-margin
+            
+            &::after
+                display: none
 
-    .main-line
-        //box-sizing: border-box
+    &::before
+        content: ''
         height: 100%
         width: $line-width
         grid-column: 2 / span 1
         grid-row-start: 1
+        grid-row-end: span 1000
         background-color: var(--text-normal)
-        //border-left: $main-line-width solid var(--text-normal)
         opacity: 0.1
-
-//regulate function from EventFactory class from earlier versions
-.timeline
-    .time-container .time, .info .title, .info .description
-        & > *:first-child, & > *:last-child
-            margin-top: 0
-            margin-bottom: 0
