--- a/src/style/snippet/styles.sass
+++ b/src/style/snippet/styles.sass
@@ -1,15 +1,13 @@
 @import "prefix"
 
-/*date*/
+$timeline-selector: "ul:not(ul ul)"
+  
 
 .timeline.spaced-lines
-    > .description
-        p
-            line-height: 1.7rem
-
-
-.timeline.hide-titles > .title
-    display: none
+    #{$timeline-selector}
+        > li:nth-child(3n)
+            p
+                line-height: 1.7rem
 
 .timeline
     --timeline-active-color: var(--background-modifier-success)
@@ -21,33 +19,39 @@ $active-colors: ["background-modifier-success", "background-modifier-error", "ba
         --timeline-active-color: #{"var(--"+$color+")"}
 
 
-.timeline
+.timeline #{$timeline-selector}
     display: grid
     grid-template-columns: auto auto 1fr
     column-gap: $line-margin
     margin: 2.3rem 0
     
-    .time, .title, .description
+    > li
+        list-style: none
+
         > *:first-child
             margin-top: 0
 
         > *:last-child
             margin-bottom: 0
 
-    .description, .title
+    > li:nth-child(3n), > li:nth-child(3n+2)
         grid-column: 3
 
-    .time, .title
+    > li:nth-child(3n+1), > li:nth-child(3n+2)
         display: flex
         flex-direction: column
         justify-content: center
         padding: $text-margin 0
 
+        //TODO: add those 2 lines to the original
+        font-size: $header-size
+        font-weight: bold
+
         > *
             font-size: $header-size
             font-weight: bold
 
-    .time
+    > li:nth-child(3n+1)
         grid-column: 1
         position: relative
         justify-self: right
@@ -69,18 +73,24 @@ $active-colors: ["background-modifier-success", "background-modifier-error", "ba
             opacity: 0.25
 
 
-    .description
+    > li:nth-child(3n)
         position: relative
         margin-bottom: $event-margin
         padding-top: $text-margin
 
         &::after
+            $half-height: math.div($event-margin, 2)
+
             content: ' '
             position: absolute
             border-bottom: 0.1rem dashed var(--text-normal)
             opacity: 0.1
             width: 100%
-            height: math.div($event-margin, 2)
+
+            //TODO: Add to original
+            left: 0
+            bottom: -$half-height
+            transform: translateY(50%)
 
         &:last-child
             margin-bottom: $text-margin
@@ -97,3 +107,6 @@ $active-colors: ["background-modifier-success", "background-modifier-error", "ba
         grid-row-end: span 1000
         background-color: var(--text-normal)
         opacity: 0.1
+
+@import "timeline-bodies"
+@import "timeline-lines"
