--- a/src/style/snippet/prefix.sass
+++ b/src/style/snippet/prefix.sass
@@ -1,4 +1,4 @@
-$header-size: 1.3em
+$header-size: 1.3rem
 $event-margin: 4.5rem
 $line-margin: 1.5rem
 $text-margin: 0.4em //math.div($header-size, 2)
